implemented DB connection

--- a/SmartCMS/Views/Account/Manage.cshtml
+++ b/SmartCMS/Views/Account/Manage.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "个人帐户管理";
     
-    var me = (OneCard.Models.OneCardPrincipal)User;
+    var me = (SmartCMS.Models.SmartCMSPrincipal)User;
 }
 
 @section featured {
