--- a/SmartCMS/Views/Admin/Log.cshtml
+++ b/SmartCMS/Views/Admin/Log.cshtml
@@ -34,7 +34,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (OneCard.Models.LogViewModel item in Model)
+                    @foreach (SmartCMS.Models.LogViewModel item in Model)
                     {
                         <tr class="odd">
                             <td style="text-align: left; font-weight: bold;">@Html.DisplayFor(modelItem => item.Action)</td>                            
