--- a/SmartCMS/Content/Site.css
+++ b/SmartCMS/Content/Site.css
@@ -818,3 +818,55 @@ ul.dropdown-menu
 {
     background-color: #ddd !important;
 }
+
+
+<!-- Chat CSS -->
+#chat-container{
+    background-color: #999;
+    
+}
+
+.clear{
+    clear:both;
+    height:0px;
+    line-height:0px;
+}
+
+.chat-right{
+    background: burlywood;
+    height: 440px;
+
+}
+.chat-left{
+    width: 680px;
+    background-color: antiquewhite;
+    float: left;
+}
+
+#chat-content-container{
+    width: 100%;
+    background-color: aliceblue;
+    height: 350px;
+    overflow-y: auto;
+    padding:10px;
+}
+#chat-input-container{
+    width: 100%;
+    background-color: aqua;
+    height: 90px;
+}
+.chat-answer{
+    width:100%;
+}
+
+.chat-answer .answer-name,
+.chat-question .question-name
+{
+    color:blueviolet;
+}
+.chat-question
+{
+    width:100%;
+    text-align:right;
+}
+
