--- a/SmartCMS/Content/Site.css
+++ b/SmartCMS/Content/Site.css
@@ -18,17 +18,16 @@ a {
     color: #333;
     outline: none;
     padding-left: 3px;
-    padding-right: 3px;
-    text-decoration: underline;
+    padding-right: 3px;    
 }
 
     a:link, a:visited,
     a:active, a:hover {
-        color: #333;
+        color: #333;        
     }
 
     a:hover {
-        background-color: #c7d1d6;
+        text-decoration: underline;
     }
 
 header, footer, hgroup,
@@ -66,7 +65,8 @@ h4, h5, h6 {
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 30px !important;
+    font-family: 黑体 !important;
 }
 
 h2 {
@@ -220,7 +220,7 @@ ul#menu {
         background-image: -webkit-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
         background-image: linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
         color: #3e5667;
-        padding: 20px 40px 30px 40px;
+        padding: 20px 40px 10px 40px;
     }
 
         .featured hgroup.title h1, .featured hgroup.title h2 {
@@ -874,3 +874,25 @@ ul.dropdown-menu
     text-align:right;
 }
 
+
+.cms-tool-bar{
+    text-align:right;
+}
+.btn-primary,
+.btn-warning,
+.btn-success{
+    color: white !important;
+}
+
+.copyrights-footer{
+    color:#009EA1;
+    font-weight:bold;
+}
+.dataTables_length{
+    font-size:12px;
+}
+.dataTables_filter
+{
+    font-size:12px;
+    margin-top:-10px;
+}
