--- a/SmartCMS/Views/CMS/EditArticle.cshtml
+++ b/SmartCMS/Views/CMS/EditArticle.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SmartCMS.Models.ArticleViewModel
 @{
-    ViewBag.Title = "添加问答 - " + ViewBag.Category;    
+    ViewBag.Title = "问答修改";
 }
 
 @section featured {
@@ -15,7 +15,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        ADD NEW QUESTION
+        EDIT QUESTION & ANSWER
     </div>
     <div class="panel-body">
 
@@ -34,10 +34,11 @@
         }
 
 
-        @using (Html.BeginForm("AddArticle", "CMS", FormMethod.Post))
+        @using (Html.BeginForm("EditArticle", "CMS", new { id = Model.Id }, FormMethod.Post))
         {
             @Html.AntiForgeryToken()
             @Html.HiddenFor(m => m.CategoryId)
+            @Html.HiddenFor(m => m.Id)
             <div style="width:698px; margin:auto; text-align:center;">
                 <div class="form-group">
                     <div class='input-group date'>
@@ -49,7 +50,7 @@
                 </div>
 
                 <div class="form-group">
-                    <div class=''>
+                    <div class='input-group date'>
                         @Html.TextAreaFor(m => m.Answer, new { id = "myEditor", style="width:698px;height:320px;padding-left:10px;", value = Model.Answer, placeholder = "回答内容", maxlength = 1000 })                        
                     </div>
                 </div>
@@ -62,8 +63,13 @@
                     </div>
                     <div class="keyword-tips">多个关键字以空格隔开</div>
                 </div>
-                <a href="~/CMS/Category/@Model.CategoryId" class="btn btn-success" style="color:white;">返 回</a>
                 
+                <div class="form-group category-info">
+                    Created by @Model.CreatedBy at @Html.DisplayFor(m => m.CreatedAt)
+                </div>
+
+                <a href="~/CMS/Category/@Model.CategoryId" class="btn btn-success" style="color:white;">返 回</a>
+
                 <button type="submit" class="btn btn-success">保 存</button>
             </div>
 
@@ -71,11 +77,3 @@
 
     </div>
 </div>
-
-<!---
-<script language="javascript">
-    $(document).ready(function () {
-        $('#myEditor').markItUp(mySettings);
-    });
-</script>
------->
