--- a/SmartCMS/Content/Site.css
+++ b/SmartCMS/Content/Site.css
@@ -836,27 +836,63 @@ ul.dropdown-menu
 }
 
 .chat-right{
-    background: burlywood;
-    height: 440px;
-
+    height: 481px;
+    width: 278px;
+    float: right;
+    background-color:#eee;
 }
 .chat-left{
     width: 680px;
-    background-color: antiquewhite;
+    background-color: #eee;
     float: left;
 }
+.nav {
+    padding-left: 15px !important;
+}
+.nav-tabs {
+    border-bottom: 1px solid #ddd !important;
+    background: #eee !important;
+}
+.tab-content
+{
+    padding: 10px 15px;
+    border-left: 1px solid #ddd;
+    height: 440px;
+}
+.nav-tabs>li>a {
+    margin-right: 2px;
+    line-height: 1.42857143;
+    border: 1px solid #ddd !important;
+    border-radius: 4px 4px 0 0;
+    background-color: #eee !important;
+    /*border-bottom: 1px solid transparent !important;*/
+}
+
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+    color: #fff;
+    cursor: default;
+    background-color: #fff;
+    border: 1px solid #ddd !important;
+    /*border-bottom-color: transparent !important;*/
+    background: #aaa !important;
+}
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover {
+    color: #fff !important;
+}
+
 
 #chat-content-container{
     width: 100%;
-    background-color: aliceblue;
+    background-color: #fff;
     height: 350px;
     overflow-y: auto;
     padding:10px;
 }
 #chat-input-container{
-    width: 100%;
-    background-color: aqua;
+    width: 100%;    
     height: 90px;
+    border-top: 1px solid #ddd;
+    padding: 5px 15px;
 }
 .chat-answer{
     width:100%;
@@ -865,7 +901,7 @@ ul.dropdown-menu
 .chat-answer .answer-name,
 .chat-question .question-name
 {
-    color:blueviolet;
+    color:#009EA1;
 }
 .chat-question
 {
@@ -908,4 +944,24 @@ ul.dropdown-menu
     color: #aaa;
     font-style: italic;
     text-align: right;
+}
+
+#myQuestion
+{
+    height: 50px;
+    padding: 0 10px;
+    margin-top: 2px;
+    z-index: 999;
+    width: 592px;
+}
+#sendBtn
+{
+    float: right;    
+    z-index: 10000;
+    margin: 10px 0;
+}
+#current-category
+{
+    padding-left: 5px;
+    font-weight: bold;
 }
